<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Alimentacao.PassosActivity"
    android:background="@drawable/fundoaltcut2">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/grid_layout_margin">

        <TextView
            android:id="@+id/dire_text_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="10 passos para uma alimentação saudável"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/text_content_color"
            android:layout_margin="@dimen/card_view_margin"
            android:textSize="@dimen/text_subtitle_size"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_margin="@dimen/card_view_margin"
                android:text="1"
                android:layout_weight="15"
                android:textSize="40sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_view_margin"
                android:text="@string/passos_1"
                android:layout_weight="85"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_margin="@dimen/card_view_margin"
                android:text="2"
                android:layout_weight="15"
                android:textSize="40sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_view_margin"
                android:text="@string/passos_2"
                android:layout_weight="85"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_margin="@dimen/card_view_margin"
                android:text="3"
                android:layout_weight="15"
                android:textSize="40sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_view_margin"
                android:text="@string/passos_3"
                android:layout_weight="85"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_margin="@dimen/card_view_margin"
                android:text="4"
                android:layout_weight="15"
                android:textSize="40sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_view_margin"
                android:text="@string/passos_4"
                android:layout_weight="85"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_margin="@dimen/card_view_margin"
                android:text="5"
                android:layout_weight="15"
                android:textSize="40sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_view_margin"
                android:text="@string/passos_5"
                android:layout_weight="85"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_margin="@dimen/card_view_margin"
                android:text="6"
                android:layout_weight="15"
                android:textSize="40sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_view_margin"
                android:text="@string/passos_6"
                android:layout_weight="85"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_margin="@dimen/card_view_margin"
                android:text="7"
                android:layout_weight="15"
                android:textSize="40sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_view_margin"
                android:text="@string/passos_7"
                android:layout_weight="85"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_margin="@dimen/card_view_margin"
                android:text="8"
                android:layout_weight="15"
                android:textSize="40sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_view_margin"
                android:text="@string/passos_8"
                android:layout_weight="85"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_margin="@dimen/card_view_margin"
                android:text="9"
                android:layout_weight="15"
                android:textSize="40sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_view_margin"
                android:text="@string/passos_9"
                android:layout_weight="85"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_margin="@dimen/card_view_margin"
                android:text="10"
                android:layout_weight="15"
                android:textSize="40sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_view_margin"
                android:text="@string/passos_10"
                android:layout_weight="85"
                android:textColor="@color/black"/>

        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>